Fixed jumpy scrolling on mobile chrome, hopefully for real this time

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -44,7 +44,6 @@ $on-text: rgba(0,0,0, 0.225);
 
 html {
   // overflow: hidden;
-  // height: 100%;
   // width: 100%;
 }
 
@@ -67,7 +66,9 @@ body {
 
 svg.transition-paths {
   position: fixed;
-  top: 0; right: 0; bottom: 0; left: 0;
+  height: 100vh;
+  width: 100vw;
+  // top: 0; right: 0; bottom: 0; left: 0;
   pointer-events: none;
   path.color-path {
     fill: $color-primary-light;
@@ -92,7 +93,9 @@ svg.transition-paths {
   background-position: center;
   z-index: 100;
   position: fixed;
-  top: 0; right: 0; bottom: 0; left: 0;
+  height: 100vh;
+  width: 100vw;
+  // top: 0; right: 0; bottom: 0; left: 0;
   display: flex;
   align-items: center;
   justify-content: center;
